Fixed footer link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a role="button" class="btn btn-lg btn-info" id="bookmarklet" style="display: none">OkCupid AutoPassCities</a>
           </p>
         </div>
-        <footer>Source code is on <a href="https://github.com/Lucas-C/jdr/">GitHub</a></footer
+        <footer>Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass-cities/">GitHub</a></footer
       </div>
       <script>
         const form = document.forms[0];
