--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
             <li>A blue button should appear. Drag-and-drop it on your bookmark toolbar.</li>
             <li>On the <a href="https://www.okcupid.com/discover">/discover</a> page at OkCupid.com, click on your new <em>OkCupid AutoPassCities</em> bookmarklet.</li>
           </ol>
+          <p>Now, whenever OkCupid suggests a match for you in one of those cities, the <em>Pass</em> button will automatically and immediately be pressed.</p>
           <form>
             <div class="form-group">
-              <label for="cities">Cities</label>
+              <label for="cities">Cities:</label>
               <input class="form-control" id="cities" placeholder="Paris,Bordeaux">
             </div>
             <button type="submit" class="btn btn-lg btn-success">Create bookmarklet</button>
@@ -68,6 +69,9 @@
             Bookmarklet generated:
             <a role="button" class="btn btn-lg btn-info" id="bookmarklet" style="display: none">OkCupid AutoPassCities</a>
           </p>
+          <br>
+          <p>If you visit another web page, the bookmarklet will stop running.
+             You will need to re-enable it on your next visit on the <a href="https://www.okcupid.com/discover">/discover</a> page by clicking on it.</p>
         </div>
         <footer>Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass-cities/">GitHub</a></footer
       </div>
