--- a/index.html
+++ b/index.html
@@ -4,26 +4,24 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bookmarklet to auto-pass cities on OkCupid</title>
-        <meta name="description" content="Suivi de la lutte des soignants du Groupe Hospitalier Mutualiste à Grenoble">
-        <meta name="author" content="">
-        <meta name="copyright" content="">
+        <title>OkCupid AutoPassCities bookmarklet</title>
+        <meta property="og:site_name" content="OkCupid AutoPassCities bookmarklet" >
+        <meta property="og:title" content="OkCupid AutoPassCities bookmarklet" >
+        <meta itemprop="name" content="OkCupid AutoPassCities bookmarklet" >
+        <meta name="description" content="Bookmarklet to auto-pass cities on OkCupid">
+        <meta property="og:description" content="Bookmarklet to auto-pass cities on OkCupid" >
+        <meta name="twitter:description" content="SuiviBookmarklet to auto-pass cities on OkCupid" >
+        <meta itemprop="description" content="Bookmarklet to auto-pass cities on OkCupid" >
+        <meta name="author" content="Lucas Cimon">
         <meta name="twitter:card" content="summary" >
-        <meta property="og:site_name" content="Hôpitaux À Défendre : GHM @ Grenoble" >
-
-        <meta property="og:title" content="Hôpitaux À Défendre : GHM @ Grenoble" >
         <meta property="og:type" content="website" >
-        <meta property="og:url" content="." >
-        <meta name="twitter:url" content="." >
-        <meta itemprop="name" content="Hôpitaux À Défendre : GHM @ Grenoble" >
-        <meta itemprop="url" content=".">
-        <meta property="og:description" content="Suivi de la lutte des soignants du Groupe Hospitalier Mutualiste à Grenoble" >
-        <meta name="twitter:description" content="Suivi de la lutte des soignants du Groupe Hospitalier Mutualiste à Grenoble" >
-        <meta itemprop="description" content="Suivi de la lutte des soignants du Groupe Hospitalier Mutualiste à Grenoble" >
-        <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Dr_Hermitte_street_in_grenoble_%28outside%29.jpg/640px-Dr_Hermitte_street_in_grenoble_%28outside%29.jpg" >
+        <meta property="og:url" content="https://lucas-c.github.io/okcupid-auto-pass-cities/" >
+        <meta name="twitter:url" content="https://lucas-c.github.io/okcupid-auto-pass-cities/" >
+        <meta itemprop="url" content="https://lucas-c.github.io/okcupid-auto-pass-cities/">
+        <meta property="og:image" content="https://lucas-c.github.io/okcupid-auto-pass-cities/OkCupid-logo.jpg" >
         <meta property="og:image:type" content="image/jpeg" >
-        <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Dr_Hermitte_street_in_grenoble_%28outside%29.jpg/640px-Dr_Hermitte_street_in_grenoble_%28outside%29.jpg" >
-        <meta itemprop="image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Dr_Hermitte_street_in_grenoble_%28outside%29.jpg/640px-Dr_Hermitte_street_in_grenoble_%28outside%29.jpg" >
+        <meta name="twitter:image" content="https://lucas-c.github.io/okcupid-auto-pass-cities/OkCupid-logo.jpg" >
+        <meta itemprop="image" content="https://lucas-c.github.io/okcupid-auto-pass-cities/OkCupid-logo.jpg" >
         <!-- Disallow Twitter from using your site’s info for personalization purposes: -->
         <meta name="twitter:dnt" content="on">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
