Passing v.Nu HTML checker

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/WebPage">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,11 +41,11 @@
       <div class="container">
         <div class="jumbotron">
           <h1>Bookmarklet to auto-pass matches on OkCupid</h1>
-          <p class="lead"><a href="https://www.okcupid.com"><img class="logo" alt="OkCupid logo" src="OkCupid-logo.jpg"></img></a> is great!</p>
+          <p class="lead"><a href="https://www.okcupid.com"><img class="logo" alt="OkCupid logo" src="OkCupid-logo.jpg"></a> is great!</p>
           <p>One things that annoys me a little though,
           is that I often get matches for <b>people too far away</b> from where I live,
           even with the <b>distance filter</b> set in my <em>Settings</em>:</p>
-          <img class="screenshot" src="OkCupid-distance-filter.jpg">
+          <img class="screenshot" alt="Screenshot of the distance filter" src="OkCupid-distance-filter.jpg">
           <p>Hence I have made a <a href="https://en.wikipedia.org/wiki/Bookmarklet">bookmarklet</a> that <b>auto-pass matches for a list of given cities</b>. Then I got requests to add more criteria.</p>
           <p>There are the steps to configure and use your own bookmarklet:</p>
           <ol>
@@ -79,7 +79,7 @@
           <p>If you visit another web page, the bookmarklet will stop running.
              You will need to re-enable it on your next visit on the <a href="https://www.okcupid.com/discover">/discover</a> page by clicking on it.</p>
         </div>
-        <footer>Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass/">GitHub</a></footer
+        <footer>Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass/">GitHub</a></footer>
       </div>
       <script>
         const form = document.forms[0];
