--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p>If you visit another web page, the bookmarklet will stop running.
              You will need to re-enable it on your next visit on the <a href="https://www.okcupid.com/discover">/discover</a> page by clicking on it.</p>
         </div>
-        <footer>Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass/">GitHub</a></footer>
+        <footer>Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass/">GitHub</a>. If the bookmarklet stops working due to an OkCupid UI change, feel free to open an <em>issue</em> or PR there.</footer>
       </div>
       <script>
         const form = document.forms[0];
@@ -93,16 +93,17 @@
             bookmarklet.style.display = '';
             bookmarklet.href = `javascript:function autoPass() {
     const loc = document.getElementsByClassName('card-content-header__location')[0].textContent;
-    const summary = document.getElementsByClassName('dt-essay-section')[0].textContent;
-    const details = document.getElementsByClassName('dt-section-content')[1].textContent;
+    const textSections = document.getElementsByClassName('dt-essay-section');
+    const summary = textSections.length > 0 && textSections[0].textContent;
+    const details = textSections.length > 1 && textSections[1].textContent;
     const passButton = document.getElementsByClassName('pass')[0];
     if ('${citiesToExclude.value}'.split(',').some(city => city.trim() && loc.endsWith(city.trim()))) {
         passButton.click();
     }
-    if ('${summaryToExclude.value}'.split(',').some(word => word.trim() && summary.includes(word.trim()))) {
+    if (summary && '${summaryToExclude.value}'.split(',').some(word => word.trim() && summary.includes(word.trim()))) {
         passButton.click();
     }
-    if ('${detailsToExclude.value}'.split(',').some(word => word.trim() && details.includes(word.trim()))) {
+    if (details && '${detailsToExclude.value}'.split(',').some(word => word.trim() && details.includes(word.trim()))) {
         passButton.click();
     }
     setTimeout(autoPass, 500);
