Mentioning Reddit thread

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
           <p>If you visit another web page, the bookmarklet will stop running.
              You will need to re-enable it on your next visit on the <a href="https://www.okcupid.com/discover">/discover</a> page by clicking on it.</p>
         </div>
-        <footer>Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass/">GitHub</a>. If the bookmarklet stops working due to an OkCupid UI change, feel free to open an <em>issue</em> or PR there.</footer>
+        <footer>
+        Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass/">GitHub</a>. If the bookmarklet stops working due to an OkCupid UI change, feel free to open an <em>issue</em> or PR there.
+        Feedbacks are also welcome on <a href="https://www.reddit.com/r/OkCupid/comments/rueiag/i_made_a_bookmarklet_to_autopass_matches_with/">this Reddit thread</a>.
+        </footer>
       </div>
       <script>
         const form = document.forms[0];
