--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <footer>
         Source code is on <a href="https://github.com/Lucas-C/okcupid-auto-pass/">GitHub</a>. If the bookmarklet stops working due to an OkCupid UI change, feel free to open an <em>issue</em> or PR there.
-        Feedbacks are also welcome on <a href="https://www.reddit.com/r/OkCupid/comments/rueiag/i_made_a_bookmarklet_to_autopass_matches_with/">this Reddit thread</a>.
+        👍 and feedbacks are also welcome on <a href="https://www.reddit.com/r/OkCupid/comments/rueiag/i_made_a_bookmarklet_to_autopass_matches_with/">this Reddit thread</a>.
         </footer>
       </div>
       <script>
